// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit into existing position: depositBase 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 123590,
}
`;

exports[`Deposit into existing position: depositQuote 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 123497,
}
`;

exports[`Liquidation liquidate long position and create new long position 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 233411,
}
`;

exports[`Liquidation liquidate long position and create new position 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 250117,
}
`;

exports[`Liquidation liquidate short position and create new position 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 261288,
}
`;

exports[`Liquidation liquidate short position and create new short position 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 244411,
}
`;

exports[`Open position: depositBase 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 205672,
}
`;

exports[`Open position: depositQuote 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 205563,
}
`;

exports[`System initialized: closePosition 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 245615,
}
`;

exports[`System initialized: depositBase 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 213326,
}
`;

exports[`System initialized: depositQuote 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 213229,
}
`;

exports[`System initialized: long 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 309435,
}
`;

exports[`System initialized: short 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 299379,
}
`;

exports[`System initialized: withdrawBase 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 181703,
}
`;

exports[`System initialized: withdrawQuote 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 194516,
}
`;

exports[`mc happens: closePosition with two mc 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 323535,
}
`;

exports[`mc happens: depositBase with one mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 243027,
}
`;

exports[`mc happens: depositBase with two mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 304184,
}
`;

exports[`mc happens: depositQuote with one mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 237775,
}
`;

exports[`mc happens: depositQuote with two mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 304097,
}
`;

exports[`mc happens: long closePosition with one mc 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 254967,
}
`;

exports[`mc happens: long initialized heap with one mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 274648,
}
`;

exports[`mc happens: long with one mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 325397,
}
`;

exports[`mc happens: long with two mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 334447,
}
`;

exports[`mc happens: short with one mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 319529,
}
`;

exports[`mc happens: short with two mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 329631,
}
`;
